--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@puyodead1/fosscord-types",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Generated types for fosscord-server",
+  "types": "./types",
+  "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
     "publish": "pnpm run build"
